docs/book/samples/appa/unused_expr_check.out
error[unused]: unused expression: every non-final line binds a name (sequence effects with `>>`)
  --> unused_expr_check.kso:2:5
   2 |   1 + 1
           ^
